Add retention-days parameter to artifact uploads

--- a/.github/workflows/fetch_grib.yml
+++ b/.github/workflows/fetch_grib.yml
@@ -257,6 +257,7 @@ jobs:
         with:
           name: grib2
           path: data/
+          retention-days: 1
 
       - name: Delete GRIB2 files (local cleanup)
         run: rm -rf data/
@@ -319,6 +320,7 @@ jobs:
         with:
           name: iconeuflash-${{ matrix.variable }}
           path: iconeuflash/${{ matrix.variable }}
+          retention-days: 1
 
   # -------------------------------------------------------
   # 3️⃣ Merge PNGs + Deploy to R2
